# canvas-template

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
agent/: model.py  network.py
algorithm/: algorithm.py  train.py
canvas/cookiecutters/templates/sl/: cookiecutter.json
canvas/cookiecutters/templates/sl/{{cookiecutter.project_name}}/src/algorithm/: trainer.py
canvas/cookiecutters/templates/sl/{{cookiecutter.project_name}}/src/model/: model.py
canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/: LICENSE
canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/src/algorithm/: utils.py
canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/src/config/: config.yaml
canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/src/model/: __init__.py  model.py
config/: config.yaml
contributing/: index.html
docs/: contributing.md  index.md
hooks/: post_gen_project.py
model/: __init__.py  classifier.py  network.py
project/: main.py
project/algorithm/: train.py
project/config/: config.yaml
project/data/: data.py
search/: search_index.json
src/: main.py
src/algorithm/: train.py
src/canvas/: __init__.py  __main__.py
src/canvas/cookiecutters/templates/rl/{{cookiecutter.project_name}}/src/agent/: model.py
src/canvas/cookiecutters/templates/sl/{{cookiecutter.project_name}}/src/: main.py
src/canvas/cookiecutters/templates/sl/{{cookiecutter.project_name}}/src/algorithm/: trainer.py
src/canvas/cookiecutters/templates/sl/{{cookiecutter.project_name}}/src/config/: config.yaml
src/canvas/cookiecutters/templates/sl/{{cookiecutter.project_name}}/src/model/: model.py
src/canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/: .gitignore
src/canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/src/: main.py
src/canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/src/algorithm/: trainer.py
src/canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/src/config/: config.yaml
src/canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/src/data/: data.py  preprocessing.py
src/canvas/cookiecutters/templates/ssl/{{cookiecutter.project_name}}/src/model/: model.py
src/canvas/templates/rl/hooks/: post_gen_project.py  pre_gen_project.py
src/canvas/templates/rl/{{cookiecutter.project_name}}/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/canvas/templates/rl/{{cookiecutter.project_name}}/src/: main.py
src/canvas/templates/rl/{{cookiecutter.project_name}}/src/agent/: __init__.py  model.py
src/canvas/templates/rl/{{cookiecutter.project_name}}/src/algorithm/: __init__.py  evaluator.py  trainer.py
src/canvas/templates/rl/{{cookiecutter.project_name}}/src/algorithm/trainer/: __init__.py
src/canvas/templates/rl/{{cookiecutter.project_name}}/src/config/: config.yaml
src/canvas/templates/rl/{{cookiecutter.project_name}}/src/data/: __init__.py  batch.py  rollout_buffer.py
src/canvas/templates/rl/{{cookiecutter.project_name}}/src/environment/: __init__.py  environment.py
src/canvas/templates/sl/hooks/: post_gen_project.py
src/canvas/templates/sl/{{cookiecutter.project_name}}/: Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
src/canvas/templates/sl/{{cookiecutter.project_name}}/src/: main.py
src/canvas/templates/sl/{{cookiecutter.project_name}}/src/algorithm/: __init__.py  trainer.py
src/canvas/templates/sl/{{cookiecutter.project_name}}/src/config/: config.yaml
src/canvas/templates/sl/{{cookiecutter.project_name}}/src/data/: __init__.py  data.py
src/canvas/templates/sl/{{cookiecutter.project_name}}/src/model/: __init__.py  model.py  network.py
src/canvas/templates/ssl/: cookiecutter.json
src/canvas/templates/ssl/hooks/: post_gen_project.py  pre_gen_project.py
src/canvas/templates/ssl/{{cookiecutter.project_name}}/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/canvas/templates/ssl/{{cookiecutter.project_name}}/src/: main.py
src/canvas/templates/ssl/{{cookiecutter.project_name}}/src/algorithm/: __init__.py  loss.py  trainer.py
src/canvas/templates/ssl/{{cookiecutter.project_name}}/src/config/: config.yaml
src/canvas/templates/ssl/{{cookiecutter.project_name}}/src/data/: __init__.py  data.py  preprocessing.py  tokenizer.py
src/canvas/templates/ssl/{{cookiecutter.project_name}}/src/model/: __init__.py  loss.py  model.py
src/config/: config.yaml
src/data/: __init__.py  data.py
src/model/: __init__.py  classifier.py
templates/rl/{{cookiecutter.project_name}}/: README.md  requirements.txt
templates/rl/{{cookiecutter.project_name}}/src/: main.py
templates/rl/{{cookiecutter.project_name}}/src/agent/: network.py
templates/rl/{{cookiecutter.project_name}}/src/algorithm/: train.py
templates/rl/{{cookiecutter.project_name}}/src/config/: config.yaml
templates/sl/{{cookiecutter.project_name}}/: README.md
templates/sl/{{cookiecutter.project_name}}/src/: main.py
templates/sl/{{cookiecutter.project_name}}/src/algorithm/: __init__.py  train.py  trainer.py
templates/sl/{{cookiecutter.project_name}}/src/config/: config.yaml
templates/sl/{{cookiecutter.project_name}}/src/data/: data.py
templates/sl/{{cookiecutter.project_name}}/src/model/: __init__.py  model.py
templates/ssl/{{cookiecutter.project_name}}/: README.md
templates/ssl/{{cookiecutter.project_name}}/src/: main.py
templates/ssl/{{cookiecutter.project_name}}/src/algorithm/: __init__.py  train.py  trainer.py  utils.py
templates/ssl/{{cookiecutter.project_name}}/src/config/: config.yaml
templates/ssl/{{cookiecutter.project_name}}/src/data/: __init__.py  data.py  preprocessing.py  tokenizer.py
templates/ssl/{{cookiecutter.project_name}}/src/model/: __init__.py  model.py  transformer.py
