[project]
name = "canvas-template"
readme = "README.md"
version = "0.1.13"
description = "A simple, flexible, and modular pytorch template for your deep learning projects."
authors = [{ name = "Akshay Raman", email = "ar8692@nyu.edu" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = ["cookiecutter>=2.0.3", "click>=8.1.7"]

[project.optional-dependencies]
docs = ["mkdocs>=1.6.1"]

[project.scripts]
canvas = "canvas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canvas"]
