[project]
name = "canvas-template"
readme = "README.md"
version = "0.3.0"
description = "A modular, best-practice pytorch template for all your deep learning projects."
authors = [{ name = "Akshay Raman", email = "ar8692@nyu.edu" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = ["cookiecutter>=2.6.0", "click>=8.2.1", "sphinx>=8.2.3", "mkdocs>=1.6.1"]

[dependency-groups]
dev = ["ruff>=0.12.2",]
docs = ["mkdocs>=1.6.1",]

[project.scripts]
canvas = "canvas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canvas"]

[tool.ruff]
exclude = ["src/canvas/templates/"]
