[project]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.description }}"
version = "0.1.0"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
license = "{{ cookiecutter.license }}"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
{% if cookiecutter.documentation == 'mkdocs' %}
[project.optional-dependencies]
docs = ["mkdocs>=1.6.1"]
{% endif %}
