[project]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.description }}"
version = "0.1.0"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
{%- if cookiecutter.license != 'None' %}
license = "{{ cookiecutter.license }}"
license-files = ["LICENSE"]
{%- endif %}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.1",
    "hydra-core>=1.3.2",
    "tqdm>=4.67.1",
    "torchvision>=0.22.1",
]
{% if cookiecutter.documentation == 'mkdocs' %}
[project.optional-dependencies]
docs = ["mkdocs>=1.6.1"]
{% endif %}
