[project]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.description }}"
version = "0.1.0"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
{%- if cookiecutter.license != 'None' %}
license = "{{ cookiecutter.license }}"
license-files = ["LICENSE"]
{%- endif %}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.3.0",
    "hydra-core>=1.3.2",
    "tqdm>=4.67.1",
    "torchtext>=0.18.0",
    "pytorch-nlp>=0.5.0",
    "spacy>=3.8.7",
]

[dependency-groups]
dev = [
{%- if cookiecutter.linting_and_formatting == 'ruff' %}
    "ruff~=0.12",
{%- elif cookiecutter.linting_and_formatting == 'flake8+isort+black' %}
    "flake8~=7.2",
    "isort~=6.0",
    "black~=25.1",
{%- endif %}
]
{%- if cookiecutter.documentation != 'None' %}
docs = [
{%- if cookiecutter.documentation == 'mkdocs' %}
    "mkdocs~=1.6",
{%- elif cookiecutter.documentation == 'sphinx' %}
    "sphinx~=8.2",
{%- endif %}
]
{%- endif %}
